[package]
name = "diesel_test"
version = "0.1.0"
authors = ["naka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#diesel = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.10"
diesel = { version = "*", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
